# tiger-evaluator

./: .gitignore  CMakeLists.txt  License  Readme.md
src/: absyn.h  env.c  env.h  errormsg.c  eval.c  eval.h  parse.c  parse.h  prabsyn.c  prabsyn.h  semant.c  semant.h  symbol.c  symbol.h  table.c  tiger.c  tiger.l  tiger.y  translate.h
